Prevent main overflow

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ header > ul.nav .contact button {
 html > body > main {
     padding: 2rem;
     margin: 0 auto;
+    max-width: 100%;
 }
 
 html > body > footer {
